BUGFIX - Dark mode window height bugfix
Edited the css to have the min-height of 100vh

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
